Users and position domains logic refactor WIP
